--- a/index.html
+++ b/index.html
@@ -779,6 +779,31 @@
                                             <span class="numero-circulo">2</span> Definitividad
                                         </button>
                                     </li>
+                                    <li class="nav-item" role="presentation">
+                                        <button class="nav-link" id="tab1-tab" data-bs-toggle="tab" data-bs-target="#tab1" type="button" role="tab" aria-controls="tab1" aria-selected="false">
+                                            <span class="numero-circulo">2</span> Definitividad
+                                        </button>
+                                    </li>
+                                      <li class="nav-item" role="presentation">
+                                        <button class="nav-link" id="tab1-tab" data-bs-toggle="tab" data-bs-target="#tab1" type="button" role="tab" aria-controls="tab1" aria-selected="false">
+                                            <span class="numero-circulo">2</span> Definitividad
+                                        </button>
+                                    </li>
+                                      <li class="nav-item" role="presentation">
+                                        <button class="nav-link" id="tab1-tab" data-bs-toggle="tab" data-bs-target="#tab1" type="button" role="tab" aria-controls="tab1" aria-selected="false">
+                                            <span class="numero-circulo">2</span> Definitividad
+                                        </button>
+                                    </li>
+                                      <li class="nav-item" role="presentation">
+                                        <button class="nav-link" id="tab1-tab" data-bs-toggle="tab" data-bs-target="#tab1" type="button" role="tab" aria-controls="tab1" aria-selected="false">
+                                            <span class="numero-circulo">2</span> Definitividad
+                                        </button>
+                                    </li>
+                                      <li class="nav-item" role="presentation">
+                                        <button class="nav-link" id="tab1-tab" data-bs-toggle="tab" data-bs-target="#tab1" type="button" role="tab" aria-controls="tab1" aria-selected="false">
+                                            <span class="numero-circulo">2</span> Definitividad
+                                        </button>
+                                    </li>
                                 </ul>
 
                                 <div class="tab-content p-3" id="criteriosTabsContent">
