--- a/index.html
+++ b/index.html
@@ -781,28 +781,53 @@
                                     </li>
                                     <li class="nav-item" role="presentation">
                                         <button class="nav-link" id="tab1-tab" data-bs-toggle="tab" data-bs-target="#tab1" type="button" role="tab" aria-controls="tab1" aria-selected="false">
-                                            <span class="numero-circulo">2</span> Definitividad
+                                            <span class="numero-circulo">3</span> Profesor de PITC
                                         </button>
                                     </li>
                                       <li class="nav-item" role="presentation">
                                         <button class="nav-link" id="tab1-tab" data-bs-toggle="tab" data-bs-target="#tab1" type="button" role="tab" aria-controls="tab1" aria-selected="false">
-                                            <span class="numero-circulo">2</span> Definitividad
+                                            <span class="numero-circulo">4</span> Definitividad
                                         </button>
                                     </li>
                                       <li class="nav-item" role="presentation">
                                         <button class="nav-link" id="tab1-tab" data-bs-toggle="tab" data-bs-target="#tab1" type="button" role="tab" aria-controls="tab1" aria-selected="false">
-                                            <span class="numero-circulo">2</span> Definitividad
+                                            <span class="numero-circulo">5</span> Definitividad
                                         </button>
                                     </li>
                                       <li class="nav-item" role="presentation">
                                         <button class="nav-link" id="tab1-tab" data-bs-toggle="tab" data-bs-target="#tab1" type="button" role="tab" aria-controls="tab1" aria-selected="false">
-                                            <span class="numero-circulo">2</span> Definitividad
+                                            <span class="numero-circulo">6</span> Definitividad
                                         </button>
                                     </li>
                                       <li class="nav-item" role="presentation">
                                         <button class="nav-link" id="tab1-tab" data-bs-toggle="tab" data-bs-target="#tab1" type="button" role="tab" aria-controls="tab1" aria-selected="false">
-                                            <span class="numero-circulo">2</span> Definitividad
+                                            <span class="numero-circulo">7</span> Definitividad
                                         </button>
+                                    </li>
+                                      <li class="nav-item" role="presentation">
+                                        <button class="nav-link" id="tab1-tab" data-bs-toggle="tab" data-bs-target="#tab1" type="button" role="tab" aria-controls="tab1" aria-selected="false">
+                                            <span class="numero-circulo">8</span> Definitividad
+                                        </button>
+                                          <li class="nav-item" role="presentation">
+                                        <button class="nav-link" id="tab1-tab" data-bs-toggle="tab" data-bs-target="#tab1" type="button" role="tab" aria-controls="tab1" aria-selected="false">
+                                            <span class="numero-circulo">9</span> Definitividad
+                                        </button>
+                                      <li class="nav-item" role="presentation">
+                                        <button class="nav-link" id="tab1-tab" data-bs-toggle="tab" data-bs-target="#tab1" type="button" role="tab" aria-controls="tab1" aria-selected="false">
+                                            <span class="numero-circulo">10</span> Definitividad
+                                        </button>
+                                      <li class="nav-item" role="presentation">
+                                        <button class="nav-link" id="tab1-tab" data-bs-toggle="tab" data-bs-target="#tab1" type="button" role="tab" aria-controls="tab1" aria-selected="false">
+                                            <span class="numero-circulo">11</span> Definitividad
+                                        </button>
+                                      <li class="nav-item" role="presentation">
+                                        <button class="nav-link" id="tab1-tab" data-bs-toggle="tab" data-bs-target="#tab1" type="button" role="tab" aria-controls="tab1" aria-selected="false">
+                                            <span class="numero-circulo">12</span> Definitividad
+                                        </button>
+                                    </li>
+                                    </li>
+                                    </li>
+                                    </li>
                                     </li>
                                 </ul>
 
