Cambios DIV_ID: CONTENDOR

--- a/index.html
+++ b/index.html
@@ -779,60 +779,20 @@
                                             <span class="numero-circulo">2</span> Definitividad
                                         </button>
                                     </li>
-                                    <li class="nav-item" role="presentation">
-                                        <button class="nav-link" id="tab1-tab" data-bs-toggle="tab" data-bs-target="#tab1" type="button" role="tab" aria-controls="tab1" aria-selected="false">
-                                            <span class="numero-circulo">3</span> Profesor de PITC
-                                        </button>
-                                    </li>
-                                      <li class="nav-item" role="presentation">
-                                        <button class="nav-link" id="tab1-tab" data-bs-toggle="tab" data-bs-target="#tab1" type="button" role="tab" aria-controls="tab1" aria-selected="false">
-                                            <span class="numero-circulo">4</span> Definitividad
-                                        </button>
-                                    </li>
-                                      <li class="nav-item" role="presentation">
-                                        <button class="nav-link" id="tab1-tab" data-bs-toggle="tab" data-bs-target="#tab1" type="button" role="tab" aria-controls="tab1" aria-selected="false">
-                                            <span class="numero-circulo">5</span> Definitividad
-                                        </button>
-                                    </li>
-                                      <li class="nav-item" role="presentation">
-                                        <button class="nav-link" id="tab1-tab" data-bs-toggle="tab" data-bs-target="#tab1" type="button" role="tab" aria-controls="tab1" aria-selected="false">
-                                            <span class="numero-circulo">6</span> Definitividad
-                                        </button>
-                                    </li>
-                                      <li class="nav-item" role="presentation">
-                                        <button class="nav-link" id="tab1-tab" data-bs-toggle="tab" data-bs-target="#tab1" type="button" role="tab" aria-controls="tab1" aria-selected="false">
-                                            <span class="numero-circulo">7</span> Definitividad
-                                        </button>
-                                    </li>
-                                      <li class="nav-item" role="presentation">
-                                        <button class="nav-link" id="tab1-tab" data-bs-toggle="tab" data-bs-target="#tab1" type="button" role="tab" aria-controls="tab1" aria-selected="false">
-                                            <span class="numero-circulo">8</span> Definitividad
-                                        </button>
-                                          <li class="nav-item" role="presentation">
-                                        <button class="nav-link" id="tab1-tab" data-bs-toggle="tab" data-bs-target="#tab1" type="button" role="tab" aria-controls="tab1" aria-selected="false">
-                                            <span class="numero-circulo">9</span> Definitividad
-                                        </button>
-                                      <li class="nav-item" role="presentation">
-                                        <button class="nav-link" id="tab1-tab" data-bs-toggle="tab" data-bs-target="#tab1" type="button" role="tab" aria-controls="tab1" aria-selected="false">
-                                            <span class="numero-circulo">10</span> Definitividad
-                                        </button>
-                                      <li class="nav-item" role="presentation">
-                                        <button class="nav-link" id="tab1-tab" data-bs-toggle="tab" data-bs-target="#tab1" type="button" role="tab" aria-controls="tab1" aria-selected="false">
-                                            <span class="numero-circulo">11</span> Definitividad
-                                        </button>
-                                      <li class="nav-item" role="presentation">
-                                        <button class="nav-link" id="tab1-tab" data-bs-toggle="tab" data-bs-target="#tab1" type="button" role="tab" aria-controls="tab1" aria-selected="false">
-                                            <span class="numero-circulo">12</span> Definitividad
-                                        </button>
-                                    </li>
-                                    </li>
-                                    </li>
-                                    </li>
-                                    </li>
                                 </ul>
 
                                 <div class="tab-content p-3" id="criteriosTabsContent">
-                                    <!-- Contenido de las pestañas se cargará aquí -->
+                                    <div class="tab-content fade show active" id="tab0" role="tabpanel" aria-labelledby="tab0-tab">
+                                        <h4>APARTADO 5. Participación como ponente (Máximo seis ponencias)</h4>
+                                        <li style="margin-left:20px;">5.12 Conferencias y charlas de difusión y promoción de la ciencia y la cultura</li>
+                                        <div class="table-responsive">
+                                        </div>
+                                        
+                                        <h4>APARTADO 6. Productividad académica</h4>
+                                        <li style="margin-left:20px;">6.1 Publicación de revistas de divulgación que forman parte del índice de Revistas mexicanas de divulgación cientifica CONACyT</li>
+                                        <div class="table-responsive">
+                                        </div>
+                                    </div>
                                 </div>
                             </div>
                         </div>
